--- a/css-styles/mobile.css
+++ b/css-styles/mobile.css
@@ -3,6 +3,9 @@
     .container {
         width: 100%;
     }
+    .common-h3{
+        font-size: 35px;
+    }
     /*========= common css style start =========*/
     /*=========== header area start  =============*/
     .header {
